--- a/index.src.html
+++ b/index.src.html
@@ -895,8 +895,8 @@ Algorithms {#videoencoder-algorithms}
         1. Assign `encoder_config.codec` to `output_config.codec`.
         2. Assign `encoder_config.cropWidth` to `output_config.cropWidth`.
         3. Assign `encoder_config.cropHeight` to `output_config.cropHeight`.
-        4. Assign `encoder_config.dislayWidth` to `output_config.displayWidth`.
-        5. Assign `encoder_config.dislayHeight` to
+        4. Assign `encoder_config.displayWidth` to `output_config.displayWidth`.
+        5. Assign `encoder_config.displayHeight` to
             `output_config.displayHeight`.
         6. Assign the remaining keys of `output_config` as determined by
             {{VideoEncoder/[[codec implementation]]}}. The user agent
@@ -907,8 +907,8 @@ Algorithms {#videoencoder-algorithms}
             NOTE: This includes supplying the
                 {{VideoDecoderConfig/description}} to describe codec
                 specific "extradata" like the avcC bytes for AVC.
-    2. If |output_config| matches {{VideoEncoder/[[active output config]]}}, set
-        |output_config| to null. Otherwise, set
+    2. If |output_config| and {{VideoEncoder/[[active output config]]}} are
+        <a>equal dictionaries</a>, set |output_config| to null. Otherwise, set
         {{VideoEncoder/[[active output config]]}} to |output_config|.
 
         NOTE: The {{VideoDecoderConfig}} |output_config| will be `null`
@@ -1203,7 +1203,6 @@ To check if a {{VideoEncoderConfig}} is a <dfn>valid VideoEncoderConfig</dfn>,
     = 0, return `false`.
 3. If {{VideoEncoderConfig/displayWidth}} = 0 or
     {{VideoEncoderConfig/displayHeight}} = 0, return `false`.
-
 4. Return `true`.
 
 <dl>
@@ -1260,6 +1259,12 @@ To check if a {{VideoEncoderConfig}} is a <dfn>valid VideoEncoderConfig</dfn>,
       For many codecs this is merely pass-through information, but some codecs
       may optionally include display sizing in the bitstream.
 </div>
+
+
+Configuration Equivalence{#config-equivalence}
+----------------------------------------------
+Two dictionaries are <dfn>equal dictionaries</dfn> if they contain the same
+keys and values. For nested dictionaries, apply this definition recursively.
 
 
 VideoEncoderEncodeOptions{#video-encoder-options}
@@ -1755,7 +1760,7 @@ When invoked, run these steps:
   1. Resolve p with imageBitmap.
 
 ### Algorithms ###{#videoframe-algorithms}
-To check if a {{VideoDecoderConfig}} is a <dfn>valid VideoFrameInit</dfn>,
+To check if a {{VideoFrameInit}} is a <dfn>valid VideoFrameInit</dfn>,
 run these steps:
 1. If {{VideoFrameInit/codedWidth}} = 0 or {{VideoFrameInit/codedHeight}} = 0,
     return `false`.
